--- a/index.html
+++ b/index.html
@@ -586,15 +586,15 @@
                 </div>
                 
                 <!-- Reading Area -->
-                <div class="reading-area" id="readingArea">
-                    <div class="page-content" id="pageContent"></div>
+                <div class="reader-container">
+                    <div class="reader-content" id="readerContent"></div>
                 </div>
                 
-                <!-- Page Controls -->
-                <div class="page-controls">
-                    <button class="page-btn" id="prevPageBtn">← Prev Page</button>
-                    <span class="page-indicator" id="pageIndicator">Page 1</span>
-                    <button class="page-btn" id="nextPageBtn">Next Page →</button>
+                <!-- Page Navigation -->
+                <div class="page-nav" id="pageNav">
+                    <button class="page-btn" id="prevPageBtn">← Previous</button>
+                    <div class="page-info" id="pageInfo">Page 1 of 1</div>
+                    <button class="page-btn" id="nextPageBtn">Next →</button>
                 </div>
             </div>
 
