--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <!-- Howler.js for audio playback -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     
-    <!-- ResponsiveVoice for better TTS -->
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=jQZ2zSga"></script>
     <style>
         * {
             margin: 0;
@@ -166,7 +164,6 @@
             border-radius: 10px;
             padding: 0;
             max-height: 500px;
-            overflow: hidden;
             margin-bottom: 20px;
             display: none;
             flex-direction: column;
@@ -219,6 +216,8 @@
             overflow-y: auto;
             padding: 20px;
             background: white;
+            min-height: 300px;
+            max-height: 350px;
         }
 
         .reader-content {
@@ -654,9 +653,9 @@
                 </div>
             </div>
             
-            <!-- ResponsiveVoice Attribution (required for free use) -->
+            <!-- Kokoro TTS Attribution -->
             <div style="text-align: center; padding: 15px; font-size: 11px; color: #6b7280; border-top: 1px solid #e5e7eb; margin-top: 10px;">
-                Voice powered by <a href="https://responsivevoice.org" target="_blank" style="color: #2563eb; text-decoration: none;">ResponsiveVoice</a>
+                Voice powered by <a href="https://github.com/hexgrad/Kokoro-82M" target="_blank" style="color: #2563eb; text-decoration: none;">Kokoro TTS</a>
             </div>
         </div>
     </div>
